Mirror annotation processor to KSP. Remove @JvmRecord requirement for Kotlin (Refactor core package to support pluggable types: Record for Java and Data class for Kotlin). Add data-class-to-record plugin. Add gradle plugin. Relates to #45